Leak of VTImageRotationSessionRef (176 bytes) in com.apple.WebKit.GPU.Development process <https://webkit.org/b/229781> <rdar://problem/82651897>

Reviewed by Darin Adler.

* platform/graphics/cv/ImageRotationSessionVT.mm:
(WebCore::ImageRotationSessionVT::initialize):
- Add missing adoptCF() to fix the leak.


Canonical link: https://commits.webkit.org/241257@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281950 268f45cc-cd09-0410-ab3c-d52691b4dbfc